--- a/obj_LodeWithoutTask.yaml
+++ b/obj_LodeWithoutTask.yaml
@@ -21,8 +21,6 @@ scene:
   scene_source: OG
   include_robots: true
 
-
-
 objects:
   - type: DatasetObject
     name: beer_bottle
@@ -30,3 +28,19 @@ objects:
     model: nigfha
     bounding_box: [0.093, 0.093, 0.22]
     position : [-0.67, 0, 0]
+
+  - type: DatasetObject
+    name: bowl
+    category: bowl
+    model: adciys
+    #bounding_box: [ 0.093, 0.093, 0.1 ]
+    position: [ 0, 0, 0 ]
+
+  - type: DatasetObject
+    name: apple
+    category: apple
+    model: agveuv
+    position: [ 0.67, 0, 0 ]
+
+
+
